resource-manifests/service-sa-feedback.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-feedback
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sa-feedback
