resource-manifests/service-sa-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-frontend
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: sa-frontend
