resource-manifests/service-sa-web-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-web-app
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: sa-web-app
