resource-manifests/ingress-sa-frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sa-ingress-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: sa-frontend
          servicePort: 80
