resource-manifests/ingress-sa-web-app.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sa-ingress-web-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /sentiment
        backend:
          serviceName: sa-web-app
          servicePort: 80
