resource-manifests/sa-web-app-service.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sa-web-app
spec:
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: sa-web-app
    spec:
      containers:
      - image: rinormaloku/sentiment-analysis-web-app:#{Build.BuildId}#
        imagePullPolicy: Always
        name: sa-web-app
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sa-web-app
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: sa-web-app
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sa-ingress-web-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /sentiment
        backend:
          serviceName: sa-web-app
          servicePort: 80
